<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1042px"
    android:layout_height="436px"
    android:background="@color/notice_bg">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_action_bar"
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:background="@color/notice_action_bar_bg">

        <ImageView
            android:id="@+id/btn_img_back"
            android:layout_width="25px"
            android:layout_height="30px"
            android:layout_marginLeft="32px"
            android:layout_marginStart="32px"
            android:src="@drawable/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:id="@+id/v_output"
            android:layout_width="30px"
            android:layout_height="25px"
            android:background="@drawable/icon_data_output"
            android:layout_marginStart="25px"
            android:layout_marginLeft="25px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_img_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15px"
            android:textSize="22px"
            android:text="@string/tx_data_output"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/v_output" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22px"
            android:text="@string/tx_back"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="30px"
            android:layout_marginEnd="30px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_data_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="42dp"
        android:text="@string/tx_data_output_type"
        android:textColor="@color/colorWhite"
        android:textSize="22px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_action_bar" />

    <CheckBox
        android:id="@+id/cb_data_type_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_data_type_attendance"
        android:textSize="22px"
        android:button="@null"
        android:drawablePadding="20px"
        android:textColor="@color/colorWhite"
        android:drawableRight="@drawable/btn_radio_bg"
        android:drawableEnd="@drawable/btn_radio_bg"
        android:layout_marginLeft="312px"
        android:layout_marginStart="312px"
        android:layout_marginTop="32px"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_type"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <CheckBox
        android:id="@+id/cb_data_type_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_data_type_log"
        android:textSize="22px"
        android:button="@null"
        android:drawablePadding="20px"
        android:textColor="@color/colorWhite"
        android:drawableRight="@drawable/btn_radio_bg"
        android:drawableEnd="@drawable/btn_radio_bg"
        android:layout_marginLeft="60px"
        android:layout_marginStart="60px"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_type"
        app:layout_constraintTop_toTopOf="@+id/cb_data_type_attendance"
        app:layout_constraintLeft_toRightOf="@+id/cb_data_type_attendance" />

    <CheckBox
        android:id="@+id/cb_data_type_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_data_type_conf"
        android:textSize="22px"
        android:button="@null"
        android:drawablePadding="20px"
        android:textColor="@color/colorWhite"
        android:drawableRight="@drawable/btn_radio_bg"
        android:drawableEnd="@drawable/btn_radio_bg"
        android:layout_marginTop="30px"
        app:layout_constraintTop_toBottomOf="@+id/cb_data_type_attendance"
        app:layout_constraintLeft_toLeftOf="@+id/cb_data_type_attendance" />

    <CheckBox
        android:id="@+id/cb_data_type_action_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_data_type_action_log"
        android:textSize="22px"
        android:button="@null"
        android:drawablePadding="20px"
        android:textColor="@color/colorWhite"
        android:drawableRight="@drawable/btn_radio_bg"
        android:drawableEnd="@drawable/btn_radio_bg"
        android:layout_marginLeft="60px"
        android:layout_marginStart="60px"
        app:layout_constraintTop_toTopOf="@+id/cb_data_type_conf"
        app:layout_constraintLeft_toRightOf="@+id/cb_data_type_conf"
        app:layout_constraintTop_toBottomOf="@+id/cb_data_type_attendance" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_btn_next"
        android:layout_marginBottom="50px"
        android:layout_marginTop="60px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>