<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/device_msg_bg">

    <TextView
        android:id="@+id/tv_sound_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_sound_switch"
        android:textSize="22px"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="35px"
        android:layout_marginLeft="80px"
        android:layout_marginStart="80px"
        android:layout_marginRight="70px"
        android:layout_marginEnd="70px"
        />

    <!-- button on off -->
    <LinearLayout
        android:id="@+id/ll_sound_switch"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5px"
        android:layout_alignTop="@+id/tv_sound_switch"
        android:layout_toRightOf="@+id/tv_sound_switch"
        android:layout_toEndOf="@+id/tv_sound_switch"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_btn_switch_off"
            android:textSize="22px"
            android:textColor="@color/colorWhite"
            />

        <com.example.destiny.myapplication.view.SwitchView
            android:id="@+id/btn_sound_switch"
            android:layout_width="75px"
            android:layout_height="40px"
            android:layout_marginLeft="25px"
            android:layout_marginEnd="25px"
            android:layout_marginStart="25px"
            android:layout_marginRight="25px"
            app:tintColor="@color/title_left_view_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_btn_switch_on"
            android:textSize="22px"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_switch_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_sound_volume"
        android:textSize="22px"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="40px"
        android:layout_below="@+id/tv_sound_switch"
        android:layout_alignRight="@+id/tv_sound_switch"
        android:layout_alignEnd="@+id/tv_sound_switch" />

    <!--
        bsb_max 分界点值大小
        bsb_hide_bubble 是否隐藏泡沫
        bsb_section_count 分界点个数
        bsb_touch_to_seek 触摸点击
        bsb_section_text_size 分界点文字大小
        bsb_thumb_radius 触摸点大小
        bsb_thumb_radius_on_dragging 分界点大小
        bsb_track_color 右轨道颜色
        bsb_section_text_position 轨道分界点 （below_section_mark显示， bottom_sides显示最后一个， sides不显示）
        bsb_second_track_color 左轨道颜色
    -->
    <com.xw.repo.BubbleSeekBar
        android:id="@+id/seek_bar_sound"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:layout_marginTop="5px"
        android:layout_alignLeft="@+id/ll_sound_switch"
        android:layout_alignTop="@+id/tv_switch_on"
        android:layout_below="@+id/tv_sound_switch"
        android:layout_alignStart="@+id/ll_sound_switch"
        app:bsb_max="15"
        app:bsb_hide_bubble="true"
        app:bsb_section_count="5"
        app:bsb_touch_to_seek="true"
        app:bsb_show_section_text="false"
        app:bsb_section_text_size="10px"
        app:bsb_thumb_radius="6px"
        app:bsb_thumb_radius_on_dragging="10px"
        app:bsb_track_color="@color/colorWhite"
        app:bsb_section_text_position="below_section_mark"
        app:bsb_second_track_color="@color/title_left_view_bg"
        />

</RelativeLayout>